Whitespace at bottom fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+}
+
 .background {
   background-size: cover;
   min-height: 100vh;
