--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -88,6 +88,7 @@
     align-items: center;
     position: sticky;
     height: 100%;
+    background-color: $black;
   }
 
   .nav-link-container {
